--- a/demo/theme.css
+++ b/demo/theme.css
@@ -147,12 +147,12 @@ ul#main-menu
   float: right;
  }
 
-#quicklinks
+.quicklinks
 { 
   list-style: none;
  }
 
-ul#quicklinks
+ul.quicklinks
 { 
   padding-left: 1.25em;
   font-size: 0.75em;
